--- a/ELOSystem/ELOSystem.vcxproj.filters
+++ b/ELOSystem/ELOSystem.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="users.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
