--- a/ELOSystem/ELOSystem.vcxproj.filters
+++ b/ELOSystem/ELOSystem.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClCompile Include="users.cpp">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
+    <ClCompile Include="sort.cpp">
+      <Filter>Archivos de recursos</Filter>
+    </ClCompile>
+    <ClCompile Include="ELOcalculations.cpp">
+      <Filter>Archivos de recursos</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
